# Omage

./: Cargo.toml  postbuild.py  shader.py
omage/: Cargo.toml
omage-bin/: Cargo.toml
omage-bin/src/: main.rs
omage-engine/: Cargo.toml
omage-engine/src/: lib.rs
omage-renderer/: Cargo.toml
omage-renderer/src/: instance.rs  lib.rs
omage-renderer/src/allocator/: allocation.rs  block.rs  mod.rs  region.rs
omage-renderer/src/functions/: device.rs  framebuffer.rs  image.rs  instance.rs  mod.rs  render_pass.rs  swapchain.rs
omage-renderer/src/objects/: image.rs
omage-util/: Cargo.toml
omage-util/src/: lib.rs
omage/src/: engine.rs  lib.rs
