[package]
name = "omage-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

omage-renderer = {path = "../omage-renderer"}

winit = "0.26.1"
rayon = "1.5.1"
crossbeam-channel = "0.5.2"
slog = "2.7.0"