[package]
name = "omage-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

omage-util = {path = "../omage-util"}

winit = "0.26.1"
ash = "0.35.2"
ash-window = "0.9.0"
rayon = "1.5.1"
crossbeam-channel = "0.5.2"
slog = "2.7.0"
serde = "1.0.136"
serde_derive = "1.0.136"