[package]
name = "omage-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omage-util = {path = "../omage-util"}

slog = "2.7.0"
ash = "0.37.0"
ash-window = "0.10.0"
winit = "0.26.1"
serde = "1.0.136"
serde_derive = "1.0.136"
rayon = "1.5.1"
crossbeam-channel = "0.5.4"