[package]
name = "omage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
omage-renderer = {path = "../omage-renderer"}
omage-util = {path = "../omage-util"}

slog = "2.7.0"
rayon = "1.5.1"
crossbeam-channel = "0.5.4"
winit = "0.26.1"